k8s/users/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: sa-p5
  labels:
    app: users
    app.kubernetes.io/name: users
    app.kubernetes.io/part-of: sa-p5
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
        app.kubernetes.io/name: users
        app.kubernetes.io/part-of: sa-p5
    spec:
      containers:
        - name: users
          image: docker.io/zenthic22/users:c4b58f6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5003
          readinessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "300m", memory: "256Mi" }
