k8s/users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: sa-p5
  labels:
    app: users
spec:
  selector:
    app: users
  ports:
    - name: http
      port: 5003
      targetPort: http
  type: ClusterIP
